tests/algorithms/x/CS/dynamic_programming/floyd_warshall.error
error[T008]: type mismatch: expected Graph, got [[int]]
  --> /workspace/mochi/tests/github/TheAlgorithms/Mochi/dynamic_programming/floyd_warshall.mochi:49:10

 49 |   g.dp = dp
    |          ^

help:
  Change the value to match the expected type.